fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 * {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
 }
 
 .wrapper {
@@ -13,7 +12,7 @@
 #main-frame {
     width: 95%;
     height: 95vh;
-    overflow-y: hidden;
+    overflow: hidden;
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
